Move sources to the spring-kafka-2 module